--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -20,10 +20,14 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(24,24,24);
+   <string notr="true">background-color: rgb(24, 24, 24);
 </string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(24, 24, 24);
+</string>
+   </property>
    <widget class="QGroupBox" name="menuButtonsGroup">
     <property name="geometry">
      <rect>
