Removed some files from resource

--- a/img/img.qrc
+++ b/img/img.qrc
@@ -1,123 +1,88 @@
 <RCC>
-  <qresource prefix="circles">
-    <file>circles/circle1.png</file>
-    <file>circles/circle2.png</file>
-    <file>circles/circle3.png</file>
-    <file>circles/circle4.png</file>
-    <file>circles/circle5.png</file>
-    <file>circles/circle6.png</file>
-    <file>circles/circle7.png</file>
-    <file>circles/circle8.png</file>
-    <file>circles/circle9.png</file>
-    <file>circles/circle10.png</file>
-    <file>circles/circle11.png</file>
-    <file>circles/circle12.png</file>
-    <file>circles/circle13.png</file>
-    <file>circles/circle14.png</file>
-    <file>circles/circle15.png</file>
-    <file>circles/circle16.png</file>
-    <file>circles/circle17.png</file>
-    <file>circles/circle18.png</file>
-    <file>circles/circle19.png</file>
-    <file>circles/circle20.png</file>
-    <file>circles/circle21.png</file>
-    <file>circles/circle22.png</file>
-    <file>circles/circle23.png</file>
-  </qresource>
-  <qresource prefix="44x44">
-    <file>44x44/air-con.png</file>
-    <file>44x44/command.png</file>
-    <file>44x44/message.png</file>
-    <file>44x44/music.png</file>
-    <file>44x44/navigation.png</file>
-    <file>44x44/seats.png</file>
-    <file>44x44/settings.png</file>
-    <file>44x44/statistics.png</file>
-    <file>44x44/windows.png</file>
-  </qresource>
-  <qresource prefix="colorized_circles">
-    <file>colorized_circles/circle1.png</file>
-    <file>colorized_circles/circle2.png</file>
-    <file>colorized_circles/circle3.png</file>
-    <file>colorized_circles/circle4.png</file>
-    <file>colorized_circles/circle5.png</file>
-    <file>colorized_circles/circle6.png</file>
-    <file>colorized_circles/circle7.png</file>
-    <file>colorized_circles/circle8.png</file>
-    <file>colorized_circles/circle9.png</file>
-    <file>colorized_circles/circle10.png</file>
-    <file>colorized_circles/circle11.png</file>
-    <file>colorized_circles/circle12.png</file>
-    <file>colorized_circles/circle13.png</file>
-    <file>colorized_circles/circle14.png</file>
-    <file>colorized_circles/circle15.png</file>
-    <file>colorized_circles/circle16.png</file>
-    <file>colorized_circles/circle17.png</file>
-    <file>colorized_circles/circle18.png</file>
-    <file>colorized_circles/circle19.png</file>
-    <file>colorized_circles/circle20.png</file>
-    <file>colorized_circles/circle21.png</file>
-    <file>colorized_circles/circle22.png</file>
-    <file>colorized_circles/circle23.png</file>
-  </qresource>
-  <qresource prefix="dark_colorized_circles">
-    <file>dark_colorized_circles/circle1.png</file>
-    <file>dark_colorized_circles/circle2.png</file>
-    <file>dark_colorized_circles/circle3.png</file>
-    <file>dark_colorized_circles/circle4.png</file>
-    <file>dark_colorized_circles/circle5.png</file>
-    <file>dark_colorized_circles/circle6.png</file>
-    <file>dark_colorized_circles/circle7.png</file>
-    <file>dark_colorized_circles/circle8.png</file>
-    <file>dark_colorized_circles/circle9.png</file>
-    <file>dark_colorized_circles/circle10.png</file>
-    <file>dark_colorized_circles/circle11.png</file>
-    <file>dark_colorized_circles/circle12.png</file>
-    <file>dark_colorized_circles/circle13.png</file>
-    <file>dark_colorized_circles/circle14.png</file>
-    <file>dark_colorized_circles/circle15.png</file>
-    <file>dark_colorized_circles/circle16.png</file>
-    <file>dark_colorized_circles/circle17.png</file>
-    <file>dark_colorized_circles/circle18.png</file>
-    <file>dark_colorized_circles/circle19.png</file>
-    <file>dark_colorized_circles/circle20.png</file>
-    <file>dark_colorized_circles/circle21.png</file>
-    <file>dark_colorized_circles/circle22.png</file>
-    <file>dark_colorized_circles/circle23.png</file>
-  </qresource>
-  <qresource prefix="general">
-    <file>general/znak_ADek_skrot_sloneczny.png</file>
-    <file>general/adek2.png</file>
-    <file>general/adek3.png</file>
-    <file>general/battery_details_button_clicked.png</file>
-    <file>general/battery_details_button.png</file>
-    <file>general/blackcircle.png</file>
-    <file>general/bms_connect_button_clicked.png</file>
-    <file>general/bms_connect_button.png</file>
-    <file>general/cancel.png</file>
-    <file>general/clear_table_clicked.png</file>
-    <file>general/clear_table.png</file>
-    <file>general/clear-icon-3.png</file>
-    <file>general/Computer-Hardware-Keyboard-icon.png</file>
-    <file>general/CPU-512.png</file>
-    <file>general/exit_button_clicked.png</file>
-    <file>general/exit_button.png</file>
-    <file>general/gradient3.png</file>
-    <file>general/green-03.jpg</file>
-    <file>general/keyboard_button_clicked.png</file>
-    <file>general/keyboard_button.png</file>
-    <file>general/komunikacja.png</file>
-    <file>general/komunikacja2.png</file>
-    <file>general/parametry.png</file>
-    <file>general/parametry2.png</file>
-    <file>general/pintop.jpg</file>
-    <file>general/pintop.png</file>
-    <file>general/red-04.jpg</file>
-    <file>general/reporting-service-icon.png</file>
-    <file>general/start_lap_button_clicked.png</file>
-    <file>general/start_lap_button.png</file>
-    <file>general/tlo.png</file>
-    <file>general/transparent.png</file>
-    <file>general/turn-off--power-button-icon-32313.png</file>
-  </qresource>
+    <qresource prefix="/circles">
+        <file>circles/circle1.png</file>
+        <file>circles/circle2.png</file>
+        <file>circles/circle3.png</file>
+        <file>circles/circle4.png</file>
+        <file>circles/circle5.png</file>
+        <file>circles/circle6.png</file>
+        <file>circles/circle7.png</file>
+        <file>circles/circle8.png</file>
+        <file>circles/circle9.png</file>
+        <file>circles/circle10.png</file>
+        <file>circles/circle11.png</file>
+        <file>circles/circle12.png</file>
+        <file>circles/circle13.png</file>
+        <file>circles/circle14.png</file>
+        <file>circles/circle15.png</file>
+        <file>circles/circle16.png</file>
+        <file>circles/circle17.png</file>
+        <file>circles/circle18.png</file>
+        <file>circles/circle19.png</file>
+        <file>circles/circle20.png</file>
+        <file>circles/circle21.png</file>
+        <file>circles/circle22.png</file>
+        <file>circles/circle23.png</file>
+    </qresource>
+    <qresource prefix="/44x44">
+        <file>44x44/air-con.png</file>
+        <file>44x44/command.png</file>
+        <file>44x44/message.png</file>
+        <file>44x44/music.png</file>
+        <file>44x44/navigation.png</file>
+        <file>44x44/seats.png</file>
+        <file>44x44/settings.png</file>
+        <file>44x44/statistics.png</file>
+        <file>44x44/windows.png</file>
+    </qresource>
+    <qresource prefix="/colorized_circles">
+        <file>colorized_circles/circle1.png</file>
+        <file>colorized_circles/circle2.png</file>
+        <file>colorized_circles/circle3.png</file>
+        <file>colorized_circles/circle4.png</file>
+        <file>colorized_circles/circle5.png</file>
+        <file>colorized_circles/circle6.png</file>
+        <file>colorized_circles/circle7.png</file>
+        <file>colorized_circles/circle8.png</file>
+        <file>colorized_circles/circle9.png</file>
+        <file>colorized_circles/circle10.png</file>
+        <file>colorized_circles/circle11.png</file>
+        <file>colorized_circles/circle12.png</file>
+        <file>colorized_circles/circle13.png</file>
+        <file>colorized_circles/circle14.png</file>
+        <file>colorized_circles/circle15.png</file>
+        <file>colorized_circles/circle16.png</file>
+        <file>colorized_circles/circle17.png</file>
+        <file>colorized_circles/circle18.png</file>
+        <file>colorized_circles/circle19.png</file>
+        <file>colorized_circles/circle20.png</file>
+        <file>colorized_circles/circle21.png</file>
+        <file>colorized_circles/circle22.png</file>
+        <file>colorized_circles/circle23.png</file>
+    </qresource>
+    <qresource prefix="/dark_colorized_circles">
+        <file>dark_colorized_circles/circle1.png</file>
+        <file>dark_colorized_circles/circle2.png</file>
+        <file>dark_colorized_circles/circle3.png</file>
+        <file>dark_colorized_circles/circle4.png</file>
+        <file>dark_colorized_circles/circle5.png</file>
+        <file>dark_colorized_circles/circle6.png</file>
+        <file>dark_colorized_circles/circle7.png</file>
+        <file>dark_colorized_circles/circle8.png</file>
+        <file>dark_colorized_circles/circle9.png</file>
+        <file>dark_colorized_circles/circle10.png</file>
+        <file>dark_colorized_circles/circle11.png</file>
+        <file>dark_colorized_circles/circle12.png</file>
+        <file>dark_colorized_circles/circle13.png</file>
+        <file>dark_colorized_circles/circle14.png</file>
+        <file>dark_colorized_circles/circle15.png</file>
+        <file>dark_colorized_circles/circle16.png</file>
+        <file>dark_colorized_circles/circle17.png</file>
+        <file>dark_colorized_circles/circle18.png</file>
+        <file>dark_colorized_circles/circle19.png</file>
+        <file>dark_colorized_circles/circle20.png</file>
+        <file>dark_colorized_circles/circle21.png</file>
+        <file>dark_colorized_circles/circle22.png</file>
+        <file>dark_colorized_circles/circle23.png</file>
+    </qresource>
 </RCC>
